--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="./styles/reset.css"> <!-- Applied CSS reset first so that it would make my main style consistent accross browsers -->
 
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/styles.css">
   
   <title>Frontend Mentor | Single Price Grid Component</title>
 
@@ -21,7 +21,7 @@
 <body>
   <main>
     <div class="wrapper-sections">
-      <div class="section-joinOurCommunity">
+      <div class="section-joinOurCommunity section">
         <h1>
           Join our community
         </h1> 
@@ -34,7 +34,7 @@
           Perfect for any developers who are serious about honing their skills.
         </p>
       </div>
-      <div class="section-signUp">
+      <div class="section-signUp section">
         <h2>
           Monthly Subscription
         </h2>
@@ -46,32 +46,26 @@
         </p>
         <a href="https://www.frontendmentor.io" class="button">Sign Up</a>
       </div>
-      <div class="section-whyUs">
+      <div class="section-whyUs section">
         <h2>
           Why Us
         </h2>
-        <p>
-          Tutorials by industry experts
-          <br>
-          Peer &amp; expert code review
-          <br>
-          Coding exercises
-          <br>
-          Access to our GitHub repos
-          <br>
-          Community forum
-          <br>
-          Flashcard decks
-          <br>
-          New videos every week
-        </p>
+        <ul>
+          <li>Tutorials by industry experts</li>
+          <li>Peer &amp; expert code review</li>
+          <li>Coding exercises</li>
+          <li>Access to our GitHub repos</li>
+          <li>Community forum</li>
+          <li>Flashcard decks</li>
+          <li>New videos every week</li>
+        </ul>
       </div>
     </div>
   </main>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Abu Naser Muhammad Arman</a> | March 2022.
     </p>
   </footer>
 </body>
