--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
   
   <title>Frontend Mentor | Single Price Grid Component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <main>
@@ -39,7 +34,7 @@
           Monthly Subscription
         </h2>
         <div class="subscriptionFee">
-          <span class="monthlySubscriptionAmount">&dollar;29</span> per month
+          <span class="dollar">&dollar;29</span> per month
         </div>
         <p>
           Full access for less than &dollar;1 a day
