Added hover effect to button

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p>
           Full access for less than &dollar;1 a day
         </p>
-        <a href="https://www.frontendmentor.io" class="button">Sign Up</a>
+        <a href="https://www.frontendmentor.io" target="_blank" class="button">Sign Up</a>
       </div>
       <div class="section-whyUs section">
         <h2>
